# client-rust

./: .git-ftp-include  .gitattributes  .gitignore  .travis.yml  Cargo.toml  Makefile  OWNERS_ALIASES  README.md  build.rs  getting-started.md  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.github/workflows/: check.yml  ci.yml  doc.yml  test.yml
benches/: bench.rs  tso_waker_policy.rs
benches/integration/: mod.rs  raw.rs
config/: nextest.toml  pd.toml  tikv.toml
doc/: 1.0-roadmap.md  tso_waker_criterion.md
examples/: bench_batch_put.rs  pd-client.rs  pessimistic.rs  raw.rs  transaction.rs
examples/common/: mod.rs
mock-tikv/: Cargo.toml
mock-tikv/src/: lib.rs  pd.rs  server.rs  store.rs
proto/: apipb.proto  autoid.proto  brpb.proto  cdcpb.proto  coprocessor.proto  debugpb.proto  diagnosticspb.proto  disaggregated.proto  encryptionpb.proto  enginepb.proto  errorpb.proto  gcpb.proto  import_sstpb.proto  keyspace_encryptionpb.proto  keyspacepb.proto  kvrpcpb.proto  logbackuppb.proto  meta_storagepb.proto  metapb.proto  mpp.proto  pdpb.proto  raft_cmdpb.proto  raft_serverpb.proto  recoverdatapb.proto  replication_modepb.proto  resource_manager.proto  resource_usage_agent.proto  schedulingpb.proto  span.proto  tikvpb.proto  tsopb.proto
proto-build/: Cargo.toml
proto-build/src/: main.rs
proto/include/: eraftpb.proto  rustproto.proto
src/: backoff.rs  client.rs  compat.rs  config.rs  errors.rs  kv.rs  lib.rs  mock.rs  proto.rs  raw.rs  region.rs  region_cache.rs  request.rs  security.rs  stats.rs  store.rs  timestamp.rs  transaction.rs  txn.rs  util.rs
src/api/: mod.rs  raw_kv.rs
src/common/: errors.rs  mod.rs  security.rs
src/kv/: bound_range.rs  codec.rs  key.rs  kvpair.rs  mod.rs  value.rs
src/kv_client/: client.rs  errors.rs  mod.rs  request.rs
src/kv_client/requests/: mod.rs  mvcc.rs  raw.rs
src/mock/: mock_kv.rs  mock_pd.rs  mock_raw.rs  mock_rpcpd.rs  mock_tikv.rs  mod.rs
src/pd/: client.rs  cluster.rs  leader.rs  mod.rs  region_cache.rs  request.rs  retry.rs  timestamp.rs  util.rs
src/proptests/: mod.rs  raw.rs
src/raw/: client.rs  codec.rs  lowering.rs  mod.rs  requests.rs  sync_client.rs
src/request/: batch.rs  codec.rs  keyspace.rs  mod.rs  plan.rs  plan_builder.rs  request_codec.rs  shard.rs
src/rpc/: client.rs  context.rs  mod.rs  security.rs  util.rs
src/rpc/pd/: client.rs  context.rs  leader.rs  mod.rs  request.rs  timestamp.rs
src/rpc/tikv/: client.rs  context.rs  mod.rs
src/store/: client.rs  errors.rs  mod.rs  request.rs
src/transaction/: buffer.rs  client.rs  codec.rs  lock.rs  lowering.rs  mod.rs  requests.rs  snapshot.rs  sync_client.rs  sync_snapshot.rs  sync_transaction.rs  transaction.rs
src/util/: client.rs  dns.rs  iter.rs  macros.rs  mod.rs  mpsc.rs  security.rs  timer.rs
tests/: fail_points.rs  failpoint_tests.rs  failpoints_tests.rs  integration_tests.rs  mock_tikv_tests.rs  raw.rs  sync_transaction_tests.rs  test.rs
tests/common/: ctl.rs  mod.rs
tests/integration/: mod.rs  raw.proptest-regressions  raw.rs
tests/integration_tests/: mod.rs  raw.rs
tikv-client-common/: Cargo.toml
tikv-client-common/src/: compat.rs  config.rs  errors.rs  lib.rs  security.rs  stats.rs  timestamp.rs  util.rs
tikv-client-common/src/kv/: bound_range.rs  codec.rs  key.rs  kvpair.rs  mod.rs  value.rs
tikv-client-pd/: Cargo.toml
tikv-client-pd/src/: client.rs  cluster.rs  lib.rs  retry.rs  timestamp.rs
tikv-client-proto/: Cargo.toml  README.md  build.rs
tikv-client-proto/proto/: backup.proto  brpb.proto  cdcpb.proto  configpb.proto  coprocessor.proto  coprocessor_v2.proto  deadlock.proto  debugpb.proto  disk_usage.proto  encryptionpb.proto  errorpb.proto  import_kvpb.proto  import_sstpb.proto  keyspacepb.proto  kvrpcpb.proto  logbackuppb.proto  metapb.proto  mpp.proto  pdpb.proto  raft_cmdpb.proto  raft_serverpb.proto  tikvpb.proto  tracepb.proto
tikv-client-proto/src/: lib.rs
tikv-client-request/: Cargo.toml
tikv-client-request/src/: lib.rs  lock.rs  request.rs
tikv-client-store/: Cargo.toml
tikv-client-store/src/: batch.rs  client.rs  errors.rs  lib.rs  region.rs  region_cache.rs  request.rs  store_builder.rs
