[package]
name = "tikv-client"
version = "0.1.0"
keywords = ["TiKV", "KV", "distributed-systems"]
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "The Rust language implementation of TiKV client."
edition = "2018"

[features]
default = []
# Enable integration tests with a running TiKV and PD instance.
# Use $PD_ADDRS, comma separated, to set the addresses the tests use.
integration-tests = []

[lib]
name = "tikv_client"

[dependencies]
async-trait = "0.1"
derive-new = "0.5"
fail = "0.4"
futures = { version = "0.3", features = ["async-await", "thread-pool"] }
futures-timer = "3.0"
grpcio = { version = "0.9", features = [ "secure", "prost-codec", "use-bindgen", "openssl-vendored" ], default-features = false }
lazy_static = "1"
log = "0.4"
prometheus = { version = "0.12", features = [ "push", "process" ], default-features = false } 
rand = "0.8"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1"
tokio = { version = "1.0", features = [ "sync", "time" ] }

tikv-client-common = { version = "0.1.0", path = "tikv-client-common" }
tikv-client-pd = { version = "0.1.0", path = "tikv-client-pd" }
tikv-client-proto = { version = "0.1.0", path = "tikv-client-proto" }
tikv-client-store = { version = "0.1.0", path = "tikv-client-store" }


[dev-dependencies]
clap = "2"
fail = { version = "0.4", features = [ "failpoints" ] }
mock-tikv = {path = "mock-tikv"}
proptest = "1"
proptest-derive = "0.3"
serial_test = "0.5.0"
simple_logger = "1"
tokio = { version = "1.0", features = [ "sync", "rt-multi-thread", "macros" ] }
reqwest = {version = "0.11", default-features = false, features = ["native-tls-vendored"]}
serde_json = "1"

[workspace]
members = [
    "tikv-client-common",
    "tikv-client-pd",
    "tikv-client-proto",
    "tikv-client-store",
    "mock-tikv"
]

[[test]]
name = "failpoint_tests"
path = "tests/failpoint_tests.rs"
required-features = ["fail/failpoints"]
