[package]
name = "mock-tikv"
version = "0.0.0"
edition = "2018"

[dependencies]
derive-new = "0.5"
futures = "0.3"
grpcio = { git = "https://github.com/tikv/grpc-rs.git", branch = "master", features = [ "secure", "prost-codec", "use-bindgen", "openssl-vendored" ], default-features = false }
log = "0.4"
tikv-client-proto = { path = "../tikv-client-proto"}
