[package]
name = "tikv-client-common"
version = "0.0.0"
edition = "2018"


[dependencies]
thiserror = "1"
futures = { version = "0.3.5", features = ["compat", "async-await", "thread-pool"] }
grpcio = { version = "0.7", features = [ "secure", "prost-codec" ], default-features = false }
lazy_static = "1"
log = "0.4"
regex = "1"
tikv-client-proto = { path = "../tikv-client-proto" }

[dev-dependencies]
clap = "2.32"
fail = { version = "0.4", features = [ "failpoints" ] }
proptest = "0.10"
proptest-derive = "0.2"
tempfile = "3"
tokio = "1.0"
