[package]
name = "tikv-client-pd"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "Low level PD components for the TiKV Rust client"

[dependencies]
async-trait = "0.1"
futures = "0.3"
# futures = { version = "0.3", features = ["compat", "async-await", "thread-pool"] }
log = "0.4"
tikv-client-common = { version = "0.2.0", path = "../tikv-client-common" }
tikv-client-proto = { version = "0.2.0", path = "../tikv-client-proto" }
tonic = "0.9"
pin-project = "1"
tokio = { version = "1", features = ["sync"] }


[dev-dependencies]
clap = "2"
fail = { version = "0.4", features = ["failpoints"] }
proptest = "1"
proptest-derive = "0.3"
