[package]
name = "tikv-client-proto"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "Protobuf specs for the TiKV Rust client"
build = "build.rs"

[build-dependencies]
protobuf-build = { version = "0.13", default-features = false, features = ["grpcio-prost-codec"] }

[dependencies]
protobuf = "2.8"
prost = { version = "0.9" }
prost-derive = { version = "0.9" }
futures = "0.3"
grpcio = { version = "0.10", features = [ "prost-codec" ], default-features = false }
lazy_static = { version = "1" }
