[package]
name = "tikv-client-proto"
version = "0.2.0"
edition = "2018"
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "Protobuf specs for the TiKV Rust client"
build = "build.rs"

[features]
protobuf-codec = ["protobuf-build/grpcio-protobuf-codec", "raft-proto/protobuf-codec", "grpcio/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "protobuf-build/grpcio-prost-codec", "grpcio/prost-codec", "raft-proto/prost-codec"]

[build-dependencies]
protobuf-build = { version = "0.13", default-features = false }

[dependencies]
protobuf = "=2.8.0"
prost = { version = "0.9", optional = true }
prost-derive = { version = "0.9", optional = true }
futures = "0.3"
grpcio = { version = "0.10", default-features = false }
lazy_static = { version = "1" }
raft-proto = { version = "0.7.0", default-features = false }
