[package]
name = "tikv-client-proto"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "Protobuf specs for the TiKV Rust client"
build = "build.rs"

[build-dependencies]
tonic-build = "0.9"
glob = "0.3.1"

[dependencies]
futures = "0.3"
lazy_static = { version = "1" }
tonic = "0.9"
prost = "0.11"
