[package]
name = "tikv-client-store"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "Low level TiKV node components of the TiKV Rust client"

[dependencies]
async-trait = "0.1"
derive-new = "0.5"
futures = { version = "0.3", features = ["compat", "async-await", "thread-pool"] }
grpcio = { git = "https://github.com/tikv/grpc-rs.git", branch = "master", features = [ "secure", "prost-codec", "use-bindgen", "openssl-vendored" ], default-features = false }
log = "0.4"
tikv-client-common = { version = "0.1.0", path = "../tikv-client-common" }
tikv-client-proto = { version = "0.1.0", path = "../tikv-client-proto" }
